--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
-    "eslint": "^9",
+    "eslint": "^9.26.0",
     "eslint-config-next": "15.3.2",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-storybook": "^0.12.0",
     "playwright": "^1.52.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "storybook": "^8.6.12",
     "tailwindcss": "^4",
     "typescript": "^5",
