--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,5 @@
   "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "es5",
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ]
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
